# TodoApp

./: README.md
todo_app/: package-lock.json  package.json
todo_app/src/components/: TodoForm.jsx  TodoItem.jsx  TodoList.css  TodoList.jsx  TodoTab.jsx
todo_app/src/services/: todoService.js
todo_server/: main.py  pyproject.toml
